@@ -41,7 +41,7 @@ include $(APPDIR)/Make.defs
 
 APPNAME		= c3b
 PRIORITY	= SCHED_PRIORITY_DEFAULT
-STACKSIZE	= 664
+STACKSIZE	= 608
 
 APPNAME1	= shell
 PRIORITY1	= SCHED_PRIORITY_DEFAULT
