@@ -59,7 +59,7 @@
 #endif
 
 #ifndef CONFIG_EXAMPLES_TELNETD_DAEMONSTACKSIZE
-#  define CONFIG_EXAMPLES_TELNETD_DAEMONSTACKSIZE 492
+#  define CONFIG_EXAMPLES_TELNETD_DAEMONSTACKSIZE 384
 #endif
 
 #ifndef CONFIG_EXAMPLES_TELNETD_CLIENTPRIO
@@ -67,7 +67,7 @@
 #endif
 
 #ifndef CONFIG_EXAMPLES_TELNETD_CLIENTSTACKSIZE
-#  define CONFIG_EXAMPLES_TELNETD_CLIENTSTACKSIZE 964
+#  define CONFIG_EXAMPLES_TELNETD_CLIENTSTACKSIZE 864
 #endif
 
 #undef CONFIG_EXAMPLE_CC3000_MEM_CHECK
